messenger rework + observer
