# messenger/api/messenger/v1/messenger.pb.validate.go
@@ -139,169 +139,6 @@ var _ interface {
 	ErrorName() string
 } = SubscribeRequestValidationError{}
 
-// Validate checks the field values on SubscribeReply with the rules defined in
-// the proto definition for this message. If any rules are violated, the first
-// error encountered is returned, or nil if there are no violations.
-func (m *SubscribeReply) Validate() error {
-	return m.validate(false)
-}
-
-// ValidateAll checks the field values on SubscribeReply with the rules defined
-// in the proto definition for this message. If any rules are violated, the
-// result is a list of violation errors wrapped in SubscribeReplyMultiError,
-// or nil if none found.
-func (m *SubscribeReply) ValidateAll() error {
-	return m.validate(true)
-}
-
-func (m *SubscribeReply) validate(all bool) error {
-	if m == nil {
-		return nil
-	}
-
-	var errors []error
-
-	for idx, item := range m.GetMessages() {
-		_, _ = idx, item
-
-		if all {
-			switch v := interface{}(item).(type) {
-			case interface{ ValidateAll() error }:
-				if err := v.ValidateAll(); err != nil {
-					errors = append(errors, SubscribeReplyValidationError{
-						field:  fmt.Sprintf("Messages[%v]", idx),
-						reason: "embedded message failed validation",
-						cause:  err,
-					})
-				}
-			case interface{ Validate() error }:
-				if err := v.Validate(); err != nil {
-					errors = append(errors, SubscribeReplyValidationError{
-						field:  fmt.Sprintf("Messages[%v]", idx),
-						reason: "embedded message failed validation",
-						cause:  err,
-					})
-				}
-			}
-		} else if v, ok := interface{}(item).(interface{ Validate() error }); ok {
-			if err := v.Validate(); err != nil {
-				return SubscribeReplyValidationError{
-					field:  fmt.Sprintf("Messages[%v]", idx),
-					reason: "embedded message failed validation",
-					cause:  err,
-				}
-			}
-		}
-
-	}
-
-	if all {
-		switch v := interface{}(m.GetInfo()).(type) {
-		case interface{ ValidateAll() error }:
-			if err := v.ValidateAll(); err != nil {
-				errors = append(errors, SubscribeReplyValidationError{
-					field:  "Info",
-					reason: "embedded message failed validation",
-					cause:  err,
-				})
-			}
-		case interface{ Validate() error }:
-			if err := v.Validate(); err != nil {
-				errors = append(errors, SubscribeReplyValidationError{
-					field:  "Info",
-					reason: "embedded message failed validation",
-					cause:  err,
-				})
-			}
-		}
-	} else if v, ok := interface{}(m.GetInfo()).(interface{ Validate() error }); ok {
-		if err := v.Validate(); err != nil {
-			return SubscribeReplyValidationError{
-				field:  "Info",
-				reason: "embedded message failed validation",
-				cause:  err,
-			}
-		}
-	}
-
-	if len(errors) > 0 {
-		return SubscribeReplyMultiError(errors)
-	}
-
-	return nil
-}
-
-// SubscribeReplyMultiError is an error wrapping multiple validation errors
-// returned by SubscribeReply.ValidateAll() if the designated constraints
-// aren't met.
-type SubscribeReplyMultiError []error
-
-// Error returns a concatenation of all the error messages it wraps.
-func (m SubscribeReplyMultiError) Error() string {
-	var msgs []string
-	for _, err := range m {
-		msgs = append(msgs, err.Error())
-	}
-	return strings.Join(msgs, "; ")
-}
-
-// AllErrors returns a list of validation violation errors.
-func (m SubscribeReplyMultiError) AllErrors() []error { return m }
-
-// SubscribeReplyValidationError is the validation error returned by
-// SubscribeReply.Validate if the designated constraints aren't met.
-type SubscribeReplyValidationError struct {
-	field  string
-	reason string
-	cause  error
-	key    bool
-}
-
-// Field function returns field value.
-func (e SubscribeReplyValidationError) Field() string { return e.field }
-
-// Reason function returns reason value.
-func (e SubscribeReplyValidationError) Reason() string { return e.reason }
-
-// Cause function returns cause value.
-func (e SubscribeReplyValidationError) Cause() error { return e.cause }
-
-// Key function returns key value.
-func (e SubscribeReplyValidationError) Key() bool { return e.key }
-
-// ErrorName returns error name.
-func (e SubscribeReplyValidationError) ErrorName() string { return "SubscribeReplyValidationError" }
-
-// Error satisfies the builtin error interface
-func (e SubscribeReplyValidationError) Error() string {
-	cause := ""
-	if e.cause != nil {
-		cause = fmt.Sprintf(" | caused by: %v", e.cause)
-	}
-
-	key := ""
-	if e.key {
-		key = "key for "
-	}
-
-	return fmt.Sprintf(
-		"invalid %sSubscribeReply.%s: %s%s",
-		key,
-		e.field,
-		e.reason,
-		cause)
-}
-
-var _ error = SubscribeReplyValidationError{}
-
-var _ interface {
-	Field() string
-	Reason() string
-	Key() bool
-	Cause() error
-	ErrorName() string
-} = SubscribeReplyValidationError{}
-
 // Validate checks the field values on SendRequest with the rules defined in
 // the proto definition for this message. If any rules are violated, the first
 // error encountered is returned, or nil if there are no violations.
@@ -416,110 +253,6 @@ var _ interface {
 	ErrorName() string
 } = SendRequestValidationError{}
 
-// Validate checks the field values on User with the rules defined in the proto
-// definition for this message. If any rules are violated, the first error
-// encountered is returned, or nil if there are no violations.
-func (m *User) Validate() error {
-	return m.validate(false)
-}
-
-// ValidateAll checks the field values on User with the rules defined in the
-// proto definition for this message. If any rules are violated, the result is
-// a list of violation errors wrapped in UserMultiError, or nil if none found.
-func (m *User) ValidateAll() error {
-	return m.validate(true)
-}
-
-func (m *User) validate(all bool) error {
-	if m == nil {
-		return nil
-	}
-
-	var errors []error
-
-	// no validation rules for Id
-
-	// no validation rules for Name
-
-	// no validation rules for Color
-
-	if len(errors) > 0 {
-		return UserMultiError(errors)
-	}
-
-	return nil
-}
-
-// UserMultiError is an error wrapping multiple validation errors returned by
-// User.ValidateAll() if the designated constraints aren't met.
-type UserMultiError []error
-
-// Error returns a concatenation of all the error messages it wraps.
-func (m UserMultiError) Error() string {
-	var msgs []string
-	for _, err := range m {
-		msgs = append(msgs, err.Error())
-	}
-	return strings.Join(msgs, "; ")
-}
-
-// AllErrors returns a list of validation violation errors.
-func (m UserMultiError) AllErrors() []error { return m }
-
-// UserValidationError is the validation error returned by User.Validate if the
-// designated constraints aren't met.
-type UserValidationError struct {
-	field  string
-	reason string
-	cause  error
-	key    bool
-}
-
-// Field function returns field value.
-func (e UserValidationError) Field() string { return e.field }
-
-// Reason function returns reason value.
-func (e UserValidationError) Reason() string { return e.reason }
-
-// Cause function returns cause value.
-func (e UserValidationError) Cause() error { return e.cause }
-
-// Key function returns key value.
-func (e UserValidationError) Key() bool { return e.key }
-
-// ErrorName returns error name.
-func (e UserValidationError) ErrorName() string { return "UserValidationError" }
-
-// Error satisfies the builtin error interface
-func (e UserValidationError) Error() string {
-	cause := ""
-	if e.cause != nil {
-		cause = fmt.Sprintf(" | caused by: %v", e.cause)
-	}
-
-	key := ""
-	if e.key {
-		key = "key for "
-	}
-
-	return fmt.Sprintf(
-		"invalid %sUser.%s: %s%s",
-		key,
-		e.field,
-		e.reason,
-		cause)
-}
-
-var _ error = UserValidationError{}
-
-var _ interface {
-	Field() string
-	Reason() string
-	Key() bool
-	Cause() error
-	ErrorName() string
-} = UserValidationError{}
-
 // Validate checks the field values on NewMessage with the rules defined in the
 // proto definition for this message. If any rules are violated, the first
 // error encountered is returned, or nil if there are no violations.
@@ -574,6 +307,35 @@ func (m *NewMessage) validate(all bool) error {
 	}
 
 	// no validation rules for Text
+
+	if all {
+		switch v := interface{}(m.GetTimestamp()).(type) {
+		case interface{ ValidateAll() error }:
+			if err := v.ValidateAll(); err != nil {
+				errors = append(errors, NewMessageValidationError{
+					field:  "Timestamp",
+					reason: "embedded message failed validation",
+					cause:  err,
+				})
+			}
+		case interface{ Validate() error }:
+			if err := v.Validate(); err != nil {
+				errors = append(errors, NewMessageValidationError{
+					field:  "Timestamp",
+					reason: "embedded message failed validation",
+					cause:  err,
+				})
+			}
+		}
+	} else if v, ok := interface{}(m.GetTimestamp()).(interface{ Validate() error }); ok {
+		if err := v.Validate(); err != nil {
+			return NewMessageValidationError{
+				field:  "Timestamp",
+				reason: "embedded message failed validation",
+				cause:  err,
+			}
+		}
+	}
 
 	if len(errors) > 0 {
 		return NewMessageMultiError(errors)
@@ -652,78 +414,48 @@ var _ interface {
 	ErrorName() string
 } = NewMessageValidationError{}
 
-// Validate checks the field values on SubscribeReply_ChatInfo with the rules
-// defined in the proto definition for this message. If any rules are
-// violated, the first error encountered is returned, or nil if there are no violations.
-func (m *SubscribeReply_ChatInfo) Validate() error {
+// Validate checks the field values on NewMessage_User with the rules defined
+// in the proto definition for this message. If any rules are violated, the
+// first error encountered is returned, or nil if there are no violations.
+func (m *NewMessage_User) Validate() error {
 	return m.validate(false)
 }
 
-// ValidateAll checks the field values on SubscribeReply_ChatInfo with the
-// rules defined in the proto definition for this message. If any rules are
+// ValidateAll checks the field values on NewMessage_User with the rules
+// defined in the proto definition for this message. If any rules are
 // violated, the result is a list of violation errors wrapped in
-// SubscribeReply_ChatInfoMultiError, or nil if none found.
-func (m *SubscribeReply_ChatInfo) ValidateAll() error {
+// NewMessage_UserMultiError, or nil if none found.
+func (m *NewMessage_User) ValidateAll() error {
 	return m.validate(true)
 }
 
-func (m *SubscribeReply_ChatInfo) validate(all bool) error {
+func (m *NewMessage_User) validate(all bool) error {
 	if m == nil {
 		return nil
 	}
 
 	var errors []error
 
-	// no validation rules for Count
+	// no validation rules for Id
 
-	for idx, item := range m.GetMembers() {
-		_, _ = idx, item
+	// no validation rules for Name
 
-		if all {
-			switch v := interface{}(item).(type) {
-			case interface{ ValidateAll() error }:
-				if err := v.ValidateAll(); err != nil {
-					errors = append(errors, SubscribeReply_ChatInfoValidationError{
-						field:  fmt.Sprintf("Members[%v]", idx),
-						reason: "embedded message failed validation",
-						cause:  err,
-					})
-				}
-			case interface{ Validate() error }:
-				if err := v.Validate(); err != nil {
-					errors = append(errors, SubscribeReply_ChatInfoValidationError{
-						field:  fmt.Sprintf("Members[%v]", idx),
-						reason: "embedded message failed validation",
-						cause:  err,
-					})
-				}
-			}
-		} else if v, ok := interface{}(item).(interface{ Validate() error }); ok {
-			if err := v.Validate(); err != nil {
-				return SubscribeReply_ChatInfoValidationError{
-					field:  fmt.Sprintf("Members[%v]", idx),
-					reason: "embedded message failed validation",
-					cause:  err,
-				}
-			}
-		}
-
-	}
+	// no validation rules for Color
 
 	if len(errors) > 0 {
-		return SubscribeReply_ChatInfoMultiError(errors)
+		return NewMessage_UserMultiError(errors)
 	}
 
 	return nil
 }
 
-// SubscribeReply_ChatInfoMultiError is an error wrapping multiple validation
-// errors returned by SubscribeReply_ChatInfo.ValidateAll() if the designated
-// constraints aren't met.
-type SubscribeReply_ChatInfoMultiError []error
+// NewMessage_UserMultiError is an error wrapping multiple validation errors
+// returned by NewMessage_User.ValidateAll() if the designated constraints
+// aren't met.
+type NewMessage_UserMultiError []error
 
 // Error returns a concatenation of all the error messages it wraps.
-func (m SubscribeReply_ChatInfoMultiError) Error() string {
+func (m NewMessage_UserMultiError) Error() string {
 	var msgs []string
 	for _, err := range m {
 		msgs = append(msgs, err.Error())
@@ -732,11 +464,11 @@ func (m SubscribeReply_ChatInfoMultiError) Error() string {
 }
 
 // AllErrors returns a list of validation violation errors.
-func (m SubscribeReply_ChatInfoMultiError) AllErrors() []error { return m }
+func (m NewMessage_UserMultiError) AllErrors() []error { return m }
 
-// SubscribeReply_ChatInfoValidationError is the validation error returned by
-// SubscribeReply_ChatInfo.Validate if the designated constraints aren't met.
-type SubscribeReply_ChatInfoValidationError struct {
+// NewMessage_UserValidationError is the validation error returned by
+// NewMessage_User.Validate if the designated constraints aren't met.
+type NewMessage_UserValidationError struct {
 	field  string
 	reason string
 	cause  error
@@ -744,24 +476,22 @@ type SubscribeReply_ChatInfoValidationError struct {
 }
 
 // Field function returns field value.
-func (e SubscribeReply_ChatInfoValidationError) Field() string { return e.field }
+func (e NewMessage_UserValidationError) Field() string { return e.field }
 
 // Reason function returns reason value.
-func (e SubscribeReply_ChatInfoValidationError) Reason() string { return e.reason }
+func (e NewMessage_UserValidationError) Reason() string { return e.reason }
 
 // Cause function returns cause value.
-func (e SubscribeReply_ChatInfoValidationError) Cause() error { return e.cause }
+func (e NewMessage_UserValidationError) Cause() error { return e.cause }
 
 // Key function returns key value.
-func (e SubscribeReply_ChatInfoValidationError) Key() bool { return e.key }
+func (e NewMessage_UserValidationError) Key() bool { return e.key }
 
 // ErrorName returns error name.
-func (e SubscribeReply_ChatInfoValidationError) ErrorName() string {
-	return "SubscribeReply_ChatInfoValidationError"
-}
+func (e NewMessage_UserValidationError) ErrorName() string { return "NewMessage_UserValidationError" }
 
 // Error satisfies the builtin error interface
-func (e SubscribeReply_ChatInfoValidationError) Error() string {
+func (e NewMessage_UserValidationError) Error() string {
 	cause := ""
 	if e.cause != nil {
 		cause = fmt.Sprintf(" | caused by: %v", e.cause)
@@ -773,14 +503,14 @@ func (e SubscribeReply_ChatInfoValidationError) Error() string {
 	}
 
 	return fmt.Sprintf(
-		"invalid %sSubscribeReply_ChatInfo.%s: %s%s",
+		"invalid %sNewMessage_User.%s: %s%s",
 		key,
 		e.field,
 		e.reason,
 		cause)
 }
 
-var _ error = SubscribeReply_ChatInfoValidationError{}
+var _ error = NewMessage_UserValidationError{}
 
 var _ interface {
 	Field() string
@@ -788,4 +518,4 @@ var _ interface {
 	Key() bool
 	Cause() error
 	ErrorName() string
-} = SubscribeReply_ChatInfoValidationError{}
+} = NewMessage_UserValidationError{}
