# messenger/openapi.yaml
@@ -52,7 +52,7 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/SubscribeReply'
+                                $ref: '#/components/schemas/NewMessage'
                 default:
                     description: Default error response
                     content:
@@ -76,8 +76,21 @@ components:
                     type: integer
                     format: uint64
                 user:
-                    $ref: '#/components/schemas/User'
+                    $ref: '#/components/schemas/NewMessage_User'
                 text:
+                    type: string
+                timestamp:
+                    type: string
+                    format: date-time
+        NewMessage_User:
+            type: object
+            properties:
+                id:
+                    type: integer
+                    format: uint64
+                name:
+                    type: string
+                color:
                     type: string
         SendRequest:
             type: object
@@ -106,34 +119,5 @@ components:
                         $ref: '#/components/schemas/GoogleProtobufAny'
                     description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
             description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
-        SubscribeReply:
-            type: object
-            properties:
-                messages:
-                    type: array
-                    items:
-                        $ref: '#/components/schemas/NewMessage'
-                info:
-                    $ref: '#/components/schemas/SubscribeReply_ChatInfo'
-        SubscribeReply_ChatInfo:
-            type: object
-            properties:
-                count:
-                    type: integer
-                    format: uint64
-                members:
-                    type: array
-                    items:
-                        $ref: '#/components/schemas/User'
-        User:
-            type: object
-            properties:
-                id:
-                    type: integer
-                    format: uint64
-                name:
-                    type: string
-                color:
-                    type: string
 tags:
     - name: Messenger
